force-app/main/default/objects/Account/fields/col_AggregatedTotalAgreement__c.field-meta.xml
<CustomField>
    <fullName>col_AggregatedTotalAgreement__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This fields rolls-up the Total Agreement Value from all Collaboration projects linked to this Account</description>
    <inlineHelpText>The summary of the Total Agreement Values from the related Collaboration projects. Only Projects in Stage &quot;Running&quot;, &quot;In Closing&quot; and &quot;Closed&quot; are summarised.</inlineHelpText>
    <label>Aggregated Collaboration Total Agreement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>