force-app/main/default/objects/Account/fields/col_CEOContact__c.field-meta.xml
<CustomField>
    <fullName>CEOContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to the CEO contact for the Account.</description>
    <label>CEO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>