force-app/main/default/objects/Account/fields/col_CollaborationPartnerSince__c.field-meta.xml
<CustomField>
    <fullName>CollaborationPartnerSince__c</fullName>
    <description>Used in CollApp to track when the collaboration with a given Account started</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Collaboration Partner Since</label>
    <type>Date</type>
</CustomField>