force-app/main/default/objects/Account/fields/col_CorporateKeySite__c.field-meta.xml
<CustomField>
    <fullName>col_CorporateKeySite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Collapp to identify if an Account is a Corporate Key Site</description>
    <label>Corporate Key Site</label>
    <type>Checkbox</type>
</CustomField>