force-app/main/default/objects/Account/fields/col_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>