force-app/main/default/objects/Account/fields/col_IFANumber__c.field-meta.xml
<CustomField>
    <fullName>col_IFANumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>To be used for Account identification with back-end systems. Later it needs to be a unique ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>IFA Number (External Id))</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>