force-app/main/default/objects/Account/fields/col_NumberOfContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfContacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rollup field on Contact to count the related Contacts.</description>
    <label>Number of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>