force-app/main/default/objects/Account/fields/col_OSCAccountID__c.field-meta.xml
<CustomField>
    <fullName>OSCAccountID__c</fullName>
    <description>External ID from Oracle Sales Cloud ID (Shareville ID)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Oracle Sales Cloud ID (Shareville ID)</inlineHelpText>
    <label>OSC Account ID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>