force-app/main/default/objects/Account/fields/col_RegionalKeySite__c.field-meta.xml
<CustomField>
    <fullName>RegionalKeySite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Collapp to identify if an Account is a Regional Key Site</description>
    <label>Regional Key Site</label>
    <type>Checkbox</type>
</CustomField>