force-app/main/default/objects/Account/fields/col_StartDateofPartnership__c.field-meta.xml
<CustomField>
    <fullName>col_StartDateofPartnership__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date of Partnership</label>
    <type>Date</type>
</CustomField>