force-app/main/default/objects/Account/fields/col_TIN__c.field-meta.xml
<CustomField>
    <fullName>col_TIN__c</fullName>
    <description>Used in CollApp to store the Tax Identification Number of the Account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tax Identification Number</inlineHelpText>
    <label>TIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>