force-app/main/default/objects/Account/fields/col_TotalBudget__c.field-meta.xml
<CustomField>
    <fullName>col_TotalBudget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Roll-up summary from the related Collaboration Projects&apos; Budget field if the Project record&apos;s Stage value is one of the &quot;Running&quot;, &quot;Ic Cloing&quot;, &quot;Closed&quot; values.</inlineHelpText>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>