force-app/main/default/objects/Account/fields/col_VPCollEngagementManager__c.field-meta.xml
<CustomField>
    <fullName>VPCollEngagementManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Value Partnership Collaboration Engagement Manager</inlineHelpText>
    <label>VP Collaboration Engagement Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (VP Collaboration Engagement Manager)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>