force-app/main/default/objects/Account/fields/col_VPEngagementManager__c.field-meta.xml
<CustomField>
    <fullName>col_VPEngagementManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Value Partnership Engagement Manager</inlineHelpText>
    <label>VP Engagement Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (VP Engagement Manager)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>