force-app/main/default/objects/Account/fields/col_VPType__c.field-meta.xml
<CustomField>
    <fullName>col_VPType__c</fullName>
    <label>VP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>active VP (commercial only, no coll. commitment)</fullName>
            </value>
            <value>
                <fullName>active VP incl. coll. commitment</fullName>
            </value>
            <value>
                <fullName>target VP site (commercial only)</fullName>
            </value>
            <value>
                <fullName>target VP site incl. commitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>