force-app/main/default/objects/Account/fields/NumberOfContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfContacts__c</fullName>
    <label>Number of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>