force-app/main/default/objects/Account/fields/SHS_Account_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>SHS_Account_Free_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Free Text</label>
    <type>TextArea</type>
</CustomField>