force-app/main/default/objects/Account/fields/SHS_Account_group__c.field-meta.xml
<CustomField>
    <fullName>SHS_Account_group__c</fullName>
    <label>Account Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
            </value>
            <value>
                <fullName>0002</fullName>
            </value>
            <value>
                <fullName>0003</fullName>
            </value>
            <value>
                <fullName>0004</fullName>
            </value>
            <value>
                <fullName>0005</fullName>
            </value>
            <value>
                <fullName>0006</fullName>
            </value>
            <value>
                <fullName>0007</fullName>
            </value>
            <value>
                <fullName>0012</fullName>
            </value>
            <value>
                <fullName>0100</fullName>
            </value>
            <value>
                <fullName>0110</fullName>
            </value>
            <value>
                <fullName>0120</fullName>
            </value>
            <value>
                <fullName>0130</fullName>
            </value>
            <value>
                <fullName>0140</fullName>
            </value>
            <value>
                <fullName>0150</fullName>
            </value>
            <value>
                <fullName>0160</fullName>
            </value>
            <value>
                <fullName>0170</fullName>
            </value>
            <value>
                <fullName>CPD</fullName>
            </value>
            <value>
                <fullName>CPDA</fullName>
            </value>
            <value>
                <fullName>DEBI</fullName>
            </value>
            <value>
                <fullName>KUNA</fullName>
            </value>
            <value>
                <fullName>VVD</fullName>
            </value>
            <value>
                <fullName>YASD</fullName>
            </value>
            <value>
                <fullName>YCGP</fullName>
            </value>
            <value>
                <fullName>YCSD</fullName>
            </value>
            <value>
                <fullName>YDSH</fullName>
            </value>
            <value>
                <fullName>YEUR</fullName>
            </value>
            <value>
                <fullName>YGPO</fullName>
            </value>
            <value>
                <fullName>ZIHE</fullName>
            </value>
            <value>
                <fullName>ZNAT</fullName>
            </value>
            <value>
                <fullName>ZNCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>