force-app/main/default/objects/Account/fields/SHS_Account_group_description__c.field-meta.xml
<CustomField>
    <fullName>SHS_Account_group_description__c</fullName>
    <label>Account Group Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SHS_Account_group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sold-to party</fullName>
            </value>
            <value>
                <fullName>Ship-to party</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Bill-to party</fullName>
            </value>
            <value>
                <fullName>Prospective customer</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Sales partner</fullName>
            </value>
            <value>
                <fullName>Hierarchy node</fullName>
            </value>
            <value>
                <fullName>Distribution center</fullName>
            </value>
            <value>
                <fullName>Branch w/o intercomp.billing</fullName>
            </value>
            <value>
                <fullName>Branch with intercomp.billing</fullName>
            </value>
            <value>
                <fullName>Branch with external billing</fullName>
            </value>
            <value>
                <fullName>Franchisee</fullName>
            </value>
            <value>
                <fullName>Wholesale customer</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>One-time cust.(int.no.assgnmt)</fullName>
            </value>
            <value>
                <fullName>One-time cust.(ext.no.assgnmt)</fullName>
            </value>
            <value>
                <fullName>Customer (int.number assgnmt)</fullName>
            </value>
            <value>
                <fullName>Customer (ext.number assgnmt)</fullName>
            </value>
            <value>
                <fullName>TR-LO customer</fullName>
            </value>
            <value>
                <fullName>Sales District-Acuson</fullName>
            </value>
            <value>
                <fullName>DX ChargeBack GPO</fullName>
            </value>
            <value>
                <fullName>Sales District-CSG</fullName>
            </value>
            <value>
                <fullName>DX Sales Rep</fullName>
            </value>
            <value>
                <fullName>DX End Users</fullName>
            </value>
            <value>
                <fullName>DX Super group</fullName>
            </value>
            <value>
                <fullName>Inhouse Engineer</fullName>
            </value>
            <value>
                <fullName>National Account/VPA</fullName>
            </value>
            <value>
                <fullName>National Corporate Initiative</fullName>
            </value>
            <value>
                <fullName>Participant to Compl. Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>