force-app/main/default/objects/Account/fields/SHS_Account_status__c.field-meta.xml
<CustomField>
    <fullName>SHS_Account_status__c</fullName>
    <description>CISS Data</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Validation Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejected By CMD</label>
            </value>
            <value>
                <fullName>Unsubscription Requested</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>Manual Unsubscription Requested</fullName>
            </value>
            <value>
                <fullName>Imported Draft</fullName>
            </value>
            <value>
                <fullName>Migrated account for Procurement</fullName>
                <isActive>false</isActive>
                <label>Migrated account for Procurement</label>
            </value>
            <value>
                <fullName>Migrated account for Supply (OEM)</fullName>
                <isActive>false</isActive>
                <label>Migrated account for Supply (OEM)</label>
            </value>
            <value>
                <fullName>Migrated account for collaboration</fullName>
                <isActive>false</isActive>
                <label>Migrated account for collaboration</label>
            </value>
            <value>
                <fullName>Rejected By CMD</fullName>
                <isActive>false</isActive>
                <label>Rejected By CMD</label>
            </value>
            <value>
                <fullName>SHS_ACCOUNT_STATUS__C</fullName>
                <isActive>false</isActive>
                <label>SHS_ACCOUNT_STATUS__C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>