force-app/main/default/objects/Account/fields/SHS_Account_Trust_Level__c.field-meta.xml
<CustomField>
    <fullName>SHS_Account_Trust_Level__c</fullName>
    <description>To be derived from the Account Type and Status Mapping - see Workflow for Accounts and Req.</description>
    <formula>IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;Conga - Restricted Prospect&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Imported Draft&quot;)),&quot;n/a&quot;,
IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;Conga - Restricted Prospect&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Draft&quot;)),&quot;Low&quot;,
IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;Conga - Restricted Prospect&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Validation Pending&quot;)),&quot;Low&quot;,
IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;Conga - Restricted Prospect&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Rejected&quot;)),&quot;Low&quot;,
IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;CMD&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Active&quot;)),&quot;High&quot;,
IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;Conga - Validated&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Rejected&quot;)),&quot;High&quot;,
IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;Legacy Migrated Account&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Draft&quot;)),&quot;Low&quot;,
IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;Legacy Migrated Account&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Validation Pending&quot;)),&quot;Low&quot;,
IF(AND(RecordType.DeveloperName = &apos;External&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;Legacy Migrated Account&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Rejected&quot;)),&quot;Low&quot;,
IF(AND(RecordType.DeveloperName = &apos;P40_Account&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;P40&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Active&quot;),
NOT(ISPICKVAL(SHS_Account_group__c, &quot;0005&quot;))),&quot;Mid&quot;,
IF(AND(RecordType.DeveloperName = &apos;P40_Account&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;P40&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Active&quot;),
ISPICKVAL(SHS_Account_group__c, &quot;0005&quot;)),&quot;Low&quot;,
IF(AND(RecordType.DeveloperName = &apos;One_Time_Load&apos;,
ISPICKVAL(SHS_Account_type__c, &quot;One Time Load&quot;),
ISPICKVAL(SHS_Account_status__c, &quot;Active&quot;)),&quot;Mid&quot;, NULL))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Certain Contracts require High or Mid level values in order to activate the agreement, refer to Contract Type Reference Guide.</inlineHelpText>
    <label>Account Trust Level</label>
    <type>Text</type>
</CustomField>