force-app/main/default/objects/Account/fields/SHS_Account_type__c.field-meta.xml
<CustomField>
    <fullName>SHS_Account_type__c</fullName>
    <description>CISS Data</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CISS</fullName>
            </value>
            <value>
                <fullName>CMD</fullName>
            </value>
            <value>
                <fullName>Conga - Restricted Prospect</fullName>
                <default>true</default>
                <label>Conga - Restricted Prospect</label>
            </value>
            <value>
                <fullName>Conga - Validated</fullName>
            </value>
            <value>
                <fullName>P40</fullName>
            </value>
            <value>
                <fullName>One Time Load</fullName>
                <label>One-Time Load</label>
            </value>
            <value>
                <fullName>Legacy Migrated Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>