force-app/main/default/objects/Account/fields/SHS_Account_UUID__c.field-meta.xml
<CustomField>
    <fullName>SHS_Account_UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Universally Unique ID</inlineHelpText>
    <label>Account UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>