force-app/main/default/objects/Account/fields/SHS_Address__c.field-meta.xml
<CustomField>
    <fullName>SHS_Address__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;External&apos;,SHS_Street_i__c &amp;&quot; &quot;&amp; SHS_Street2_i__c  &amp;&quot;, &quot;&amp; SHS_City_i__c &amp;&quot;, &quot;&amp; SHS_Postal_code__c&amp;&quot;, &quot;&amp; SHS_Country_iso3__c,
IF(RecordType.DeveloperName = &apos;Siemens_Healthineers&apos;,SHS_Street__c &amp;&quot;, &quot;&amp; SHS_Zip_code__c &amp;&quot;, &quot;&amp; SHS_City__c &amp;&quot;, &quot;&amp; SHS_Country_iso3__c,
IF(RecordType.DeveloperName = &apos;Siemens&apos;,SHS_Street__c &amp;&quot;, &quot;&amp; SHS_Zip_code__c &amp;&quot;, &quot;&amp; SHS_City__c &amp;&quot;, &quot;&amp; SHS_Country_iso3__c,
IF(RecordType.DeveloperName = &apos;P40_Account&apos;,SHS_Street__c &amp;&quot;, &quot;&amp; SHS_Zip_code__c &amp;&quot;, &quot;&amp; SHS_City__c &amp;&quot;, &quot;&amp; SHS_Country_iso3__c,NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>