force-app/main/default/objects/Account/fields/SHS_Address_No__c.field-meta.xml
<CustomField>
    <fullName>SHS_Address_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>