force-app/main/default/objects/Account/fields/SHS_Are__c.field-meta.xml
<CustomField>
    <fullName>SHS_Are__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>CISS Data - unique identifier (case-sensitive)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ARE</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>