force-app/main/default/objects/Account/fields/SHS_Are_ifa__c.field-meta.xml
<CustomField>
    <fullName>SHS_Are_ifa__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;External&apos;,SHS_Ifa_nr__c,
IF(RecordType.DeveloperName = &apos;Siemens_Healthineers&apos;,SHS_Are__c,
IF(RecordType.DeveloperName = &apos;Siemens&apos;,SHS_Are__c,
IF(RecordType.DeveloperName = &apos;P40_Account&apos;,SHS_Ifa_nr__c,NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARE / IFA</label>
    <type>Text</type>
</CustomField>