force-app/main/default/objects/Account/fields/SHS_Business_partner_type__c.field-meta.xml
<CustomField>
    <fullName>SHS_Business_partner_type__c</fullName>
    <inlineHelpText>Type of business partner: customer (C1) or vendor (V1)</inlineHelpText>
    <label>Business Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>