force-app/main/default/objects/Account/fields/SHS_Ciss_cmd_account_id__c.field-meta.xml
<CustomField>
    <fullName>SHS_Ciss_cmd_account_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CISS / CMD Account ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>