force-app/main/default/objects/Account/fields/SHS_City__c.field-meta.xml
<CustomField>
    <fullName>SHS_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>