force-app/main/default/objects/Account/fields/SHS_City_i__c.field-meta.xml
<CustomField>
    <fullName>SHS_City_i__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City (international)</label>
    <length>35</length>
    <type>Text</type>
</CustomField>