force-app/main/default/objects/Account/fields/SHS_City_of_post_office_box__c.field-meta.xml
<CustomField>
    <fullName>SHS_City_of_post_office_box__c</fullName>
    <description>Field where user can enter a value for the City as it pertains specifically to the PO Box. This field is only required to be filled in situations where the CMD Rules for a country require an input for a Post Office Box number and the associated City differs from the City listed for the physical address of the legal entity. User creating the account record will fill this information in the Account Information Section, and the value will be subject to being overwritten based on the value CMD returns (so once a value returned in CMD Master section for &quot;SHS_City_po_box__c&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To be filled only in situations where the CMD Rules for a country require an input for a Post Office Box number and the associated City differs from the City listed for the physical address of the legal entity.</inlineHelpText>
    <label>City of Post Office Box</label>
    <length>20</length>
    <type>Text</type>
</CustomField>