force-app/main/default/objects/Account/fields/SHS_City_po_box__c.field-meta.xml
<CustomField>
    <fullName>SHS_City_po_box__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CMD - City of Post Office Box</label>
    <length>40</length>
    <type>Text</type>
</CustomField>