force-app/main/default/objects/Account/fields/SHS_City_po_box_i__c.field-meta.xml
<CustomField>
    <fullName>SHS_City_po_box_i__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City of Post Office Box (international)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>