force-app/main/default/objects/Account/fields/SHS_CMD_Business_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>SHS_CMD_Business_Partner_Type__c</fullName>
    <label>CMD Business Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>