force-app/main/default/objects/Account/fields/SHS_CMD_Governmental_Customer_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SHS_CMD_Governmental_Customer_Indicator__c</fullName>
    <label>CMD Governmental Customer Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>