force-app/main/default/objects/Account/fields/SHS_Cmd_info__c.field-meta.xml
<CustomField>
    <fullName>SHS_Cmd_info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CMD Info</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>