force-app/main/default/objects/Account/fields/SHS_CMD_info_text__c.field-meta.xml
<CustomField>
    <fullName>SHS_CMD_info_text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CMD Info Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>