force-app/main/default/objects/Account/fields/SHS_CMD_Region__c.field-meta.xml
<CustomField>
    <fullName>SHS_CMD_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CMD Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>