force-app/main/default/objects/Account/fields/SHS_CMD_subscription_status__c.field-meta.xml
<CustomField>
    <fullName>SHS_CMD_subscription_status__c</fullName>
    <description>&quot;Maps from the CMD &quot;&quot;Action&quot;&quot; field.  Acceptable CMD Inbound values to be sent from CLMA Snaplogic pipeline: &apos;N&apos;;&apos;C&apos;;&apos;D&apos;;  Acceptable CMD Outbound values: N;C;V to be sent from CMD to Snaplogic Pipeline.
   N - New 
   C - Change 
   D - Deletion 
   V - Unsubscription accepted 

Unsubscribed Accounts will reflect a value of &quot;&quot;V&quot;&quot; in this field and IFA Nr will be cleared upon CMD completing the unsubscription process.  

Mapping of the above values received by CLMA from CMD are automatically mapped to Account Status values.&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>&quot;Inbound: &apos;N&apos;;&apos;C&apos;;&apos;D&apos;;  Outbound: N;C;V;
   N - New 
   C - Change 
   D - Deletion 
   V - Unsubscription accepted &quot;</inlineHelpText>
    <label>CMD Subscription Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>