force-app/main/default/objects/Account/fields/SHS_Company_postal_code__c.field-meta.xml
<CustomField>
    <fullName>SHS_Company_postal_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>