force-app/main/default/objects/Account/fields/SHS_Company_pstcd__c.field-meta.xml
<CustomField>
    <fullName>SHS_Company_pstcd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Postal Code of the Company (by large companies)</inlineHelpText>
    <label>Postal Code of the Company</label>
    <length>10</length>
    <type>Text</type>
</CustomField>