force-app/main/default/objects/Account/fields/SHS_Conga_cmd_equivalent__c.field-meta.xml
<CustomField>
    <fullName>SHS_Conga_cmd_equivalent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga CMD Equivalent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select &quot;External&quot; Account</errorMessage>
        <filterItems>
            <field>Account.SHS_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>External</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>