force-app/main/default/objects/Account/fields/SHS_Country__c.field-meta.xml
<CustomField>
    <fullName>SHS_Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SHS_Country</valueSetName>
    </valueSet>
</CustomField>