force-app/main/default/objects/Account/fields/SHS_Country_iso3__c.field-meta.xml
<CustomField>
    <fullName>SHS_Country_iso3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ISO3 country code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>