force-app/main/default/objects/Account/fields/SHS_Country_name__c.field-meta.xml
<CustomField>
    <fullName>SHS_Country_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>