force-app/main/default/objects/Account/fields/SHS_Customer_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>SHS_Customer_Create_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Create Date</label>
    <type>Date</type>
</CustomField>