force-app/main/default/objects/Account/fields/SHS_Customer_name3__c.field-meta.xml
<CustomField>
    <fullName>SHS_Customer_name3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>