force-app/main/default/objects/Account/fields/SHS_Customer_name4__c.field-meta.xml
<CustomField>
    <fullName>SHS_Customer_name4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>