force-app/main/default/objects/Account/fields/SHS_Customer_no__c.field-meta.xml
<CustomField>
    <fullName>SHS_Customer_no__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>P40 Customer No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>