force-app/main/default/objects/Account/fields/SHS_Deletion__c.field-meta.xml
<CustomField>
    <fullName>SHS_Deletion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deletion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>