force-app/main/default/objects/Account/fields/SHS_Designated_CLMA_Account__c.field-meta.xml
<CustomField>
    <fullName>SHS_Designated_CLMA_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designated Account for Duplicate IFAs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>