force-app/main/default/objects/Account/fields/SHS_Doing_Business_As_DBA__c.field-meta.xml
<CustomField>
    <fullName>SHS_Doing_Business_As_DBA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doing Business As (DBA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>